DBSCAN with lateral offset heuristic

--- a/sidewalk.ipynb
+++ b/sidewalk.ipynb
@@ -120,7 +120,7 @@
     "\n",
     "    if len(pointsWithinBuffer) > 0:\n",
     "        median_elevation = statistics.median(lidarData.loc[np.asarray(pointsWithinBuffer)]['Z'])\n",
-    "        offsetFilteredDf = offsetFilteredDf[(offsetFilteredDf['X'] > pt[0] + 5) | (offsetFilteredDf['X'] < pt[0] - 5)  | (offsetFilteredDf['Y'] > pt[1] + 5) | (offsetFilteredDf['Y'] < pt[1] - 5) | (offsetFilteredDf['Z'] < median_elevation + 0.4)]\n",
+    "        offsetFilteredDf = offsetFilteredDf[(offsetFilteredDf['X'] > pt[0] + 5) | (offsetFilteredDf['X'] < pt[0] - 5)  | (offsetFilteredDf['Y'] > pt[1] + 5) | (offsetFilteredDf['Y'] < pt[1] - 5) | (offsetFilteredDf['Z'] < median_elevation + 0.6)]\n",
     "\n",
     "        \n",
     "print(offsetFilteredDf.shape)\n",
@@ -183,7 +183,7 @@
     "    slice = []\n",
     "    for pt in points_in_sample:\n",
     "        slice.append((pt[1].distance(offset_line), sample_df.loc[pt[0]]['Z'], sample_df.loc[pt[0]]['geometry']))\n",
-    "    slices.append(slice)\n",
+    "    slices.append((dist, slice))\n",
     "\n",
     "    # Each \"slice\" in slices is a tuple of (dist_from_offset, z, POINT())\n",
     "    # Slices are sorted by their distance from the offset line\n",
@@ -205,8 +205,10 @@
     "mg = 0.01 # minimum gradient\n",
     "ma = 0.09 # minimum acceleration\n",
     "\n",
-    "for slice in slices:\n",
+    "for dist_and_slice in slices:\n",
     "    values = []\n",
+    "    dist = dist_and_slice[0]\n",
+    "    slice = dist_and_slice[1]\n",
     "    for i in range((len(slice) - (len(slice) % h)) // 2, len(slice) - (len(slice) % h), h):\n",
     "        pt = (statistics.mean([x[0] for x in slice[i:i+h]]), statistics.mean([x[1] for x in slice[i:i+h]]))\n",
     "        ## Check last and sign, add if sign changes\n",
@@ -216,11 +218,11 @@
     "            values = values[1:]\n",
     "            values.append(pt[1])\n",
     "            if (values[0] > values[1]+mg and values[1] > values[2]+mg and values[3] > values[2]+mg and values[4] > values[3]+mg):\n",
-    "                edges.append(Point(slice[i][2].x, slice[i][2].y, slice[i][1])) \n",
+    "                edges.append((dist, Point(slice[i][2].x, slice[i][2].y, slice[i][1]), slice[i][0]))\n",
     "            elif (values[0]+mg < values[1] and values[1]+mg < values[2] and values[3]+mg < values[2] and values[4]+mg < values[3]):\n",
-    "                edges.append(Point(slice[i][2].x, slice[i][2].y, slice[i][1]))\n",
+    "                edges.append((dist, Point(slice[i][2].x, slice[i][2].y, slice[i][1]), slice[i][0]))\n",
     "            elif abs((values[4] - values[3]) - (values[3] - values[2])) > ma:\n",
-    "                edges.append(Point(slice[i][2].x, slice[i][2].y, slice[i][1]))\n",
+    "                edges.append((dist, Point(slice[i][2].x, slice[i][2].y, slice[i][1]), slice[i][0]))\n",
     "\n",
     "print(len(edges))"
    ]
@@ -234,11 +236,13 @@
     "edge_plot_x = []\n",
     "edge_plot_y = []\n",
     "for pt in edges:\n",
-    "    edge_plot_x.append(pt.x)\n",
-    "    edge_plot_y.append(pt.y)\n",
+    "    edge_plot_x.append(pt[0])\n",
+    "    edge_plot_y.append(100 * pt[2])\n",
     "\n",
     "plt.scatter(edge_plot_x, edge_plot_y, marker='.', alpha=1)\n",
-    "plt.show()"
+    "plt.show()\n",
+    "\n",
+    "print(len(edge_plot_x))"
    ]
   },
   {
@@ -247,7 +251,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dbscan_eplsilon = 0.085\n",
+    "dbscan_eplsilon = 0.8\n",
     "dbscan_min_samples = 2\n",
     "\n",
     "X = np.vstack((np.array(edge_plot_x), np.array(edge_plot_y))).T\n",
@@ -255,19 +259,21 @@
     "\n",
     "\n",
     "color_labels = [\"lime\", \"r\", \"g\", \"b\", \"m\", \"c\", \"y\", \"k\", \"blueviolet\", \"tomato\", \"gold\", \"darkblue\", \"lime\", \"wheat\", \"teal\"]\n",
-    "clustering.labels_\n",
+    "print(len(clustering.labels_))\n",
     "\n",
     "clustered_x = []\n",
     "clustered_y = []\n",
     "cluster_colors = []\n",
     "for i in range(len(edges)):\n",
     "    if clustering.labels_[i] != -1:\n",
-    "        clustered_x.append(edges[i].x)\n",
-    "        clustered_y.append(edges[i].y)\n",
+    "        clustered_x.append(edges[i][1].x)\n",
+    "        clustered_y.append(edges[i][1].y)\n",
     "        cluster_colors.append(color_labels[clustering.labels_[i]])\n",
     "\n",
     "plt.scatter(clustered_x, clustered_y, marker='.', alpha=1, c=cluster_colors)\n",
-    "plt.show()"
+    "plt.show()\n",
+    "\n",
+    "clustering.labels_"
    ]
   },
   {
