stdev 1d edge detection

--- a/sidewalk.ipynb
+++ b/sidewalk.ipynb
@@ -48,15 +48,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lidarGDF.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "gpsNP = gpsGDF.filter(['X','Y'])\n",
     "#gpsNP = gpsData.to_numpy()\n",
     "gpsNP = gpsNP.to_numpy()\n",
@@ -74,21 +65,6 @@
    "source": [
     "GPSline = asLineString(gpsNP)\n",
     "GPSline"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# DO NOT RUN\n",
-    "\n",
-    "lidarNP = lidarData.filter(['X','Y'])\n",
-    "lidarNP = lidarNP.to_numpy()\n",
-    "lidarLine = asLineString(lidarNP)\n",
-    "\n",
-    "lidarLine"
    ]
   },
   {
@@ -204,24 +180,32 @@
     "h = 5\n",
     "mg = 0.01 # minimum gradient\n",
     "ma = 0.09 # minimum acceleration\n",
+    "mstd = 0.04 # minimum std_dev derivative\n",
     "\n",
     "for dist_and_slice in slices:\n",
     "    values = []\n",
+    "    std_devs = []\n",
     "    dist = dist_and_slice[0]\n",
     "    slice = dist_and_slice[1]\n",
     "    for i in range((len(slice) - (len(slice) % h)) // 2, len(slice) - (len(slice) % h), h):\n",
     "        pt = (statistics.mean([x[0] for x in slice[i:i+h]]), statistics.mean([x[1] for x in slice[i:i+h]]))\n",
+    "        deviation = statistics.stdev([x[1] for x in slice[i:i+h]])\n",
     "        ## Check last and sign, add if sign changes\n",
     "        if len(values) < 5:\n",
     "            values.append(pt[1])\n",
+    "            std_devs.append(deviation)\n",
     "        else:\n",
     "            values = values[1:]\n",
     "            values.append(pt[1])\n",
+    "            std_devs = std_devs[1:]\n",
+    "            std_devs.append(deviation)\n",
     "            if (values[0] > values[1]+mg and values[1] > values[2]+mg and values[3] > values[2]+mg and values[4] > values[3]+mg):\n",
     "                edges.append((dist, Point(slice[i][2].x, slice[i][2].y, slice[i][1]), slice[i][0]))\n",
     "            elif (values[0]+mg < values[1] and values[1]+mg < values[2] and values[3]+mg < values[2] and values[4]+mg < values[3]):\n",
     "                edges.append((dist, Point(slice[i][2].x, slice[i][2].y, slice[i][1]), slice[i][0]))\n",
     "            elif abs((values[4] - values[3]) - (values[3] - values[2])) > ma:\n",
+    "                edges.append((dist, Point(slice[i][2].x, slice[i][2].y, slice[i][1]), slice[i][0]))\n",
+    "            elif (abs(std_devs[4] - std_devs[3]) > mstd):\n",
     "                edges.append((dist, Point(slice[i][2].x, slice[i][2].y, slice[i][1]), slice[i][0]))\n",
     "\n",
     "print(len(edges))"
@@ -237,7 +221,7 @@
     "edge_plot_y = []\n",
     "for pt in edges:\n",
     "    edge_plot_x.append(pt[0])\n",
-    "    edge_plot_y.append(100 * pt[2])\n",
+    "    edge_plot_y.append(1000 * pt[2])\n",
     "\n",
     "plt.scatter(edge_plot_x, edge_plot_y, marker='.', alpha=1)\n",
     "plt.show()\n",
@@ -251,14 +235,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dbscan_eplsilon = 0.8\n",
+    "dbscan_eplsilon = 4.1\n",
     "dbscan_min_samples = 2\n",
     "\n",
     "X = np.vstack((np.array(edge_plot_x), np.array(edge_plot_y))).T\n",
     "clustering = DBSCAN(eps=dbscan_eplsilon, min_samples=dbscan_min_samples).fit(X)\n",
     "\n",
     "\n",
-    "color_labels = [\"lime\", \"r\", \"g\", \"b\", \"m\", \"c\", \"y\", \"k\", \"blueviolet\", \"tomato\", \"gold\", \"darkblue\", \"lime\", \"wheat\", \"teal\"]\n",
+    "color_labels = [\"lime\", \"r\", \"g\", \"b\", \"m\", \"c\", \"y\", \"k\", \"blueviolet\", \"tomato\", \"gold\", \"darkblue\", \"black\", \"wheat\", \"teal\"]\n",
     "print(len(clustering.labels_))\n",
     "\n",
     "clustered_x = []\n",
