improved edge detection / cluster processing

--- a/sidewalk.ipynb
+++ b/sidewalk.ipynb
@@ -111,13 +111,13 @@
    "source": [
     "## PARTITION GPS LINE\n",
     "\n",
-    "slice_frequency = 0.01\n",
+    "slice_frequency = 0.08\n",
     "slice_depth = 0.1\n",
     "whole_line = False\n",
     "\n",
     "# Chose a range on the line. 2000-2200 works well\n",
-    "range_start = 2043\n",
-    "range_end = 2046\n",
+    "range_start = 1570\n",
+    "range_end = 1590\n",
     "sample_starts = np.arange(range_start, range_end, slice_frequency)\n",
     "\n",
     "if whole_line:\n",
@@ -174,19 +174,37 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "profile_x = []\n",
+    "profile_y = []\n",
+    "\n",
+    "for pt in slices[(len(slices) // 2)][1]:\n",
+    "    profile_x.append(pt[0])\n",
+    "    profile_y.append(pt[1])\n",
+    "\n",
+    "plt.scatter(profile_x, profile_y, marker='.', alpha=1)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "## EDGE CREATION BASED ON DERIVATIVE\n",
     "\n",
     "edges = []\n",
     "h = 5\n",
-    "mg = 0.01 # minimum gradient\n",
-    "ma = 0.09 # minimum acceleration\n",
-    "mstd = 0.04 # minimum std_dev derivative\n",
+    "mg = 1.02 # minimum gradient\n",
+    "ma = 0.05 # minimum acceleration\n",
+    "mstd = 0.5 # minimum std_dev derivative\n",
     "\n",
     "for dist_and_slice in slices:\n",
     "    values = []\n",
     "    std_devs = []\n",
     "    dist = dist_and_slice[0]\n",
     "    slice = dist_and_slice[1]\n",
+    "    count = 0\n",
     "    for i in range((len(slice) - (len(slice) % h)) // 2, len(slice) - (len(slice) % h), h):\n",
     "        pt = (statistics.mean([x[0] for x in slice[i:i+h]]), statistics.mean([x[1] for x in slice[i:i+h]]))\n",
     "        deviation = statistics.stdev([x[1] for x in slice[i:i+h]])\n",
@@ -207,6 +225,7 @@
     "                edges.append((dist, Point(slice[i][2].x, slice[i][2].y, slice[i][1]), slice[i][0]))\n",
     "            elif (abs(std_devs[4] - std_devs[3]) > mstd):\n",
     "                edges.append((dist, Point(slice[i][2].x, slice[i][2].y, slice[i][1]), slice[i][0]))\n",
+    "        count += 1\n",
     "\n",
     "print(len(edges))"
    ]
@@ -220,8 +239,9 @@
     "edge_plot_x = []\n",
     "edge_plot_y = []\n",
     "for pt in edges:\n",
-    "    edge_plot_x.append(pt[0])\n",
-    "    edge_plot_y.append(1000 * pt[2])\n",
+    "    if pt[2]:\n",
+    "        edge_plot_x.append(pt[0])\n",
+    "        edge_plot_y.append(1000 * pt[2])\n",
     "\n",
     "plt.scatter(edge_plot_x, edge_plot_y, marker='.', alpha=1)\n",
     "plt.show()\n",
@@ -235,14 +255,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dbscan_eplsilon = 4.1\n",
+    "dbscan_eplsilon = 9\n",
     "dbscan_min_samples = 2\n",
     "\n",
     "X = np.vstack((np.array(edge_plot_x), np.array(edge_plot_y))).T\n",
     "clustering = DBSCAN(eps=dbscan_eplsilon, min_samples=dbscan_min_samples).fit(X)\n",
     "\n",
     "\n",
-    "color_labels = [\"lime\", \"r\", \"g\", \"b\", \"m\", \"c\", \"y\", \"k\", \"blueviolet\", \"tomato\", \"gold\", \"darkblue\", \"black\", \"wheat\", \"teal\"]\n",
+    "color_labels = [\"lime\", \"r\", \"g\", \"b\", \"m\", \"c\", \"y\", \"k\", \"blueviolet\", \"tomato\", \"gold\", \"darkblue\", \"black\", \"wheat\", \"teal\", \"tan\", \"ivory\", \"lightblue\", \"crimson\", \"steelblue\", \"palegreen\"]\n",
     "print(len(clustering.labels_))\n",
     "\n",
     "clustered_x = []\n",
@@ -252,7 +272,7 @@
     "    if clustering.labels_[i] != -1:\n",
     "        clustered_x.append(edges[i][1].x)\n",
     "        clustered_y.append(edges[i][1].y)\n",
-    "        cluster_colors.append(color_labels[clustering.labels_[i]])\n",
+    "        cluster_colors.append(color_labels[clustering.labels_[i % len(color_labels)]])\n",
     "\n",
     "plt.scatter(clustered_x, clustered_y, marker='.', alpha=1, c=cluster_colors)\n",
     "plt.show()\n",
@@ -266,16 +286,76 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Renders The filtered points in 3D, and their retroflectivity\n",
+    "# REMOVE SMALL CLUSTERS\n",
     "\n",
-    "filtered_xyz = offsetFilteredDf.filter(['X', 'Y', 'Z'])\n",
-    "filtered_intensity = offsetFilteredDf.filter(['Retro'])\n",
+    "keep_clusters = []\n",
+    "histogram = {}\n",
     "\n",
-    "filtered_intensity = np.array(filtered_intensity.Retro).transpose()\n",
-    "print(filtered_intensity.shape)\n",
+    "edges_for_cloud = []\n",
     "\n",
-    "V = pptk.viewer(filtered_xyz)\n",
-    "V.attributes(filtered_intensity)"
+    "for i in clustering.labels_:\n",
+    "    if i in histogram:\n",
+    "        histogram[i] += 1\n",
+    "    else:\n",
+    "        histogram[i] = 1\n",
+    "\n",
+    "max_cluster = max(clustering.labels_)\n",
+    "average_cluster_size = statistics.mean([histogram[x] for x in histogram])\n",
+    "for i in range(max_cluster + 1):\n",
+    "    if histogram[i] >= average_cluster_size:\n",
+    "        keep_clusters.append(i)\n",
+    "\n",
+    "clustered_x = []\n",
+    "clustered_y = []\n",
+    "cluster_colors = []\n",
+    "for i in range(len(edges)):\n",
+    "    if clustering.labels_[i] in keep_clusters:\n",
+    "        clustered_x.append(edges[i][1].x)\n",
+    "        clustered_y.append(edges[i][1].y)\n",
+    "        cluster_colors.append(color_labels[clustering.labels_[i]])\n",
+    "        edges_for_cloud.append((edges[i][1].x, edges[i][1].y, edges[i][1].z))\n",
+    "\n",
+    "plt.scatter(clustered_x, clustered_y, marker='.', alpha=1, c=cluster_colors)\n",
+    "plt.show()\n",
+    "\n",
+    "print(len(keep_clusters))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "edges_df = pd.DataFrame(edges_for_cloud, columns=[\"X\", \"Y\", \"Z\"])\n",
+    "print(edges_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "edges_df.to_csv(\"edges.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # Renders The filtered points in 3D, and their retroflectivity\n",
+    "\n",
+    "# filtered_xyz = offsetFilteredDf.filter(['X', 'Y', 'Z'])\n",
+    "# filtered_intensity = offsetFilteredDf.filter(['Retro'])\n",
+    "\n",
+    "# filtered_intensity = np.array(filtered_intensity.Retro).transpose()\n",
+    "# print(filtered_intensity.shape)\n",
+    "\n",
+    "# V = pptk.viewer(filtered_xyz)\n",
+    "# V.attributes(filtered_intensity)"
    ]
   },
   {
@@ -286,7 +366,7 @@
    "source": [
     "# Export to CSV\n",
     "\n",
-    "offsetFilteredDf.to_csv(\"filtered_points.csv\")"
+    "# offsetFilteredDf.to_csv(\"filtered_points.csv\")"
    ]
   }
  ],
