--- a/sidewalk.ipynb
+++ b/sidewalk.ipynb
@@ -621,7 +621,98 @@
    "source": [
     "# Export to CSV\n",
     "\n",
-    "# offsetFilteredDf.to_csv(\"filtered_points.csv\")"
+    "# offsetFilteredDf.to_csv(\"filtered_points.csv\")\n",
+    "clustered_xy = []\n",
+    "for x, y in zip(clustered_x, clustered_y):\n",
+    "    temp = []\n",
+    "    temp.append(x)\n",
+    "    temp.append(y)\n",
+    "    clustered_xy.append(temp)\n",
+    "clustered_xy = np.array(clustered_xy)\n",
+    "type(clustered_xy)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "line =  asLineString(clustered_xy)\n",
+    "line"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ROI_length = 4\n",
+    "ROI_width = 12            # width of the ROI normal to the road\n",
+    "sub_line_list, midPointROI = [], []\n",
+    "for target_location in np.linspace(ROI_length/2, line.length, int(line.length/26)):\n",
+    "    sub_line= shapely.ops.substring(line, target_location-ROI_length/2, target_location+ROI_length/2)   \n",
+    "    sub_line_list.append(sub_line)\n",
+    "    midPointROI.append(line.interpolate(target_location))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in sub_line_list:\n",
+    "    index_array = lidarGDF.sindex.query(i.buffer(ROI_width/2, cap_style=2),predicate=\"contains\")\n",
+    "    if(len(index_array) == 0):\n",
+    "        continue;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "slopes = []\n",
+    "for i, subLine in enumerate(sub_line_list):\n",
+    "    leftLine = subLine.parallel_offset(ROI_width/2, side=\"left\")\n",
+    "    ROIpts = lidarGDF.iloc[index_array]\n",
+    "    dists, z_vals = [], []\n",
+    "    for idx, row in ROIpts.iterrows():\n",
+    "        dists.append(row['geometry'].distance(leftLine))\n",
+    "        z_vals.append(row['Z'])\n",
+    "    if(i==5):\n",
+    "        plt.scatter(dists, z_vals, alpha=0.6, color='green')\n",
+    "        plt.show()\n",
+    "    dists, z_vals = np.array(dists), np.array(z_vals)\n",
+    "    fittedLine = LinearRegression(fit_intercept=True)\n",
+    "    fittedLine.fit(dists.reshape(-1, 1), z_vals)\n",
+    "    slope, intercept = fittedLine.coef_, fittedLine.intercept_\n",
+    "    if(i==5):\n",
+    "        plt.scatter(dists, z_vals, alpha=0.6, color=\"green\")\n",
+    "        x = [0, 12]\n",
+    "        y = [intercept, slope*12 + intercept]\n",
+    "        plt.plot(x, y, color =\"red\")\n",
+    "        plt.show()\n",
+    "    slope = slope*100\n",
+    "    slopes.append(slope)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = {\"Slope(%)\":slopes}\n",
+    "pdf = pd.DataFrame(df)\n",
+    "gdf = gpd.GeoDataFrame(data=slopes, geometry=midPointROI, crs='ESRI:102604')\n",
+    "pdf['X'], pdf['Y'] = gdf['geometry'].x, gdf['geometry'].y\n",
+    "pdf.to_csv(\"sidewalk_crosslope.csv\")\n",
+    "pdf\n"
    ]
   }
  ],
